Bruce added to plots

--- a/Proposal_Group_7.ipynb
+++ b/Proposal_Group_7.ipynb
@@ -87,14 +87,16 @@
    "id": "893401f3-7ee0-4644-9f10-dc688e648ccd",
    "metadata": {},
    "source": [
-    "# (Title)"
+    "# Comparing Crime in Downtown Vancouver (rough title)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "089bcc6a-e345-41b3-8521-ca8583d030c4",
    "metadata": {},
-   "source": []
+   "source": [
+    "Analysis by Soham Chakote, Lisa Desjarlais, Kiersten Lyde-Stad, Hongli Zhang"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -147,12 +149,6 @@
    "source": [
     "##### Read, Clean, & Wrangle"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7a34611a-ee08-4d40-b4a8-49ff26f606ee",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -246,10 +242,28 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "8bf8edf9-364b-4df2-95a0-79f4bb42a79d",
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "e052333f-c20c-416d-897f-28a8571b3221",
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of 'Theft from Vehicle' crimes: 29995"
+     ]
+    }
+   ],
+   "source": [
+    "# Count the number of \"Theft from Vehicle\" crimes\n",
+    "theft_from_vehicle_count <- crime %>%\n",
+    " filter(TYPE == \"Theft from Vehicle\") %>%\n",
+    " nrow()\n",
+    "\n",
+    "# Output the count\n",
+    "cat(\"Number of 'Theft from Vehicle' crimes:\", theft_from_vehicle_count) # it didn't like the \"\\n\""
+   ]
   },
   {
    "cell_type": "markdown",
