Intro and Plots updated

--- a/Proposal_Group_7.ipynb
+++ b/Proposal_Group_7.ipynb
@@ -87,7 +87,7 @@
    "id": "893401f3-7ee0-4644-9f10-dc688e648ccd",
    "metadata": {},
    "source": [
-    "# Comparing Crime in Downtown Vancouver (rough title)"
+    "# Comparing Car Theft in Vancouver, BC. (rough title)"
    ]
   },
   {
@@ -132,7 +132,9 @@
    "cell_type": "markdown",
    "id": "45c65652-8480-4665-954a-f084f832eeeb",
    "metadata": {},
-   "source": []
+   "source": [
+    "We ask \"concerning 2018 and 2022, is the proportion of thefts from vehicles in the Strathcona and Grandview-Woodland districts significantly higher than in the West End and Central Business districts of Vancouver, BC.?\""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -243,26 +245,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "e052333f-c20c-416d-897f-28a8571b3221",
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "6.5322855197458"
+      ],
+      "text/latex": [
+       "6.5322855197458"
+      ],
+      "text/markdown": [
+       "6.5322855197458"
+      ],
+      "text/plain": [
+       "[1] 6.532286"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Number of 'Theft from Vehicle' crimes: 29995"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 3 × 2</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>NEIGHBOURHOOD</th><th scope=col>count</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>Central Business District</td><td>18899</td></tr>\n",
+       "\t<tr><td>Strathcona               </td><td> 3304</td></tr>\n",
+       "\t<tr><td>West End                 </td><td> 5341</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 3 × 2\n",
+       "\\begin{tabular}{ll}\n",
+       " NEIGHBOURHOOD & count\\\\\n",
+       " <chr> & <int>\\\\\n",
+       "\\hline\n",
+       "\t Central Business District & 18899\\\\\n",
+       "\t Strathcona                &  3304\\\\\n",
+       "\t West End                  &  5341\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 3 × 2\n",
+       "\n",
+       "| NEIGHBOURHOOD &lt;chr&gt; | count &lt;int&gt; |\n",
+       "|---|---|\n",
+       "| Central Business District | 18899 |\n",
+       "| Strathcona                |  3304 |\n",
+       "| West End                  |  5341 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  NEIGHBOURHOOD             count\n",
+       "1 Central Business District 18899\n",
+       "2 Strathcona                 3304\n",
+       "3 West End                   5341"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
+    "# Filter the data for 2018 and 2022 and calculate the mean month\n",
+    "crimes_year_2018 <- crime %>%\n",
+    "  select(YEAR, MONTH) %>%\n",
+    "  filter(YEAR == 2018)\n",
+    "month_2018_mean <- mean(crimes_year_2018$MONTH)\n",
+    "\n",
+    "crimes_year_2022 <- crime %>%\n",
+    "  select(YEAR, MONTH) %>%\n",
+    "  filter(YEAR == \"2022\")\n",
+    "\n",
+    "average_month <- crimes_year_2022 %>%\n",
+    "  summarize(avg_month = mean(MONTH))\n",
+    "month_2022_mean <- average_month$avg_month\n",
+    "month_2022_mean\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#First  focus on vehicle theft\n",
     "# Count the number of \"Theft from Vehicle\" crimes\n",
     "theft_from_vehicle_count <- crime %>%\n",
     " filter(TYPE == \"Theft from Vehicle\") %>%\n",
     " nrow()\n",
     "\n",
     "# Output the count\n",
-    "cat(\"Number of 'Theft from Vehicle' crimes:\", theft_from_vehicle_count) # it didn't like the \"\\n\""
+    "cat(\"Number of 'Theft from Vehicle' crimes:\", theft_from_vehicle_count)\n",
+    "\n",
+    "\n",
+    "theft_from_vehicle <- crime %>%\n",
+    "  filter(TYPE == \"Theft from Vehicle\" &\n",
+    "         NEIGHBOURHOOD %in% c(\"Strathcona\", \"Hastings-Sunrise\", \"Central Business District\", \"West End\")) %>%\n",
+    "  group_by(NEIGHBOURHOOD) %>%\n",
+    "  summarize(count = n())\n",
+    "\n",
+    "theft_from_vehicle\n",
+    "\n",
+    "theft_from_vehicle_histogram <- theft_from_vehicle %>%\n",
+    "ggplot(aes(x = NEIGHBOURHOOD)) +\n",
+    "  geom_histogram(fill = \"blue\", alpha = 0.5) +\n",
+    "  labs(x = \"Neighbourhood\", y = \"Number of crimes\",\n",
+    "       title = \"Histogram of Theft from Vehicle crimes in specified areas\")\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "39f18e02-491e-489c-a42a-fd4dd742ee86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crime_time <- crime %>%\n",
+    "  unite(\"time\", c(\"HOUR\", \"MINUTE\"), sep = \"\", remove = FALSE) %>%\n",
+    "  mutate(time_num = as.numeric(time)) %>%\n",
+    "  select(-c(HOUR, MINUTE))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "90848e4e-c3d7-4c61-a8bb-c5f9aa278346",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "709.69950068089"
+      ],
+      "text/latex": [
+       "709.69950068089"
+      ],
+      "text/markdown": [
+       "709.69950068089"
+      ],
+      "text/plain": [
+       "[1] 709.6995"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Filter for year 2022\n",
+    "crimes_year_2022 <- crime_time %>%\n",
+    "  filter(YEAR == 2022)\n",
+    "\n",
+    "# Calculate mean of time_num for year 2022\n",
+    "mean_time_num_2022 <- crimes_year_2022 %>%\n",
+    "  summarize(mean_time_num = mean(time_num))\n",
+    "\n",
+    "mean_time_num_2022$mean_time_num"
    ]
   },
   {
