--- a/Final_Report.ipynb
+++ b/Final_Report.ipynb
@@ -1265,7 +1265,7 @@
    "id": "3b12eb1a-50d2-4435-bc50-d186bc49da3b",
    "metadata": {},
    "source": [
-    "Figure 2. Plot depicting theft proportions of thefts between CBD/West End and Strathcona/Grandview-Woodland (2018-2022)."
+    "Figure 2. Plot depicting theft proportions between CBD/West End and Strathcona/Grandview-Woodland (2018-2022)."
    ]
   },
   {
@@ -2020,7 +2020,7 @@
    "id": "39e4f8ce-ecbe-4acd-991f-e10bfefa478a",
    "metadata": {},
    "source": [
-    "Table 4. *Point estimates of Strathcona & Grandview-Woodland versus West End & CBD proportions.*"
+    "Table 4. *Point estimates of Strathcona/Grandview-Woodland and West End/CBD proportions.*"
    ]
   },
   {
