Updated 5 year trend write-up

--- a/Final_Report.ipynb
+++ b/Final_Report.ipynb
@@ -236,7 +236,7 @@
    "id": "82765ea3-fd9d-4618-9e3e-0511420852a1",
    "metadata": {},
    "source": [
-    "First we investigate the total thefts from vehicles over five years (2018-2022). Below we can see a spike in thefts in 2019, but a decrease in thefts from 2020 to 2022, for our particular districts. This appears to be in opposition to the reported increase in thefts throughout the Lower Mainland and Vancouver Island. "
+    "First we investigate the total thefts from vehicles over five years (2018-2022). Below we can see a spike in thefts in 2019, but a decrease in thefts from 2020 to 2021 and a slight increase in 2022, for our particular districts. This appears to be in opposition to the reported increase in thefts throughout the Lower Mainland and Vancouver Island. However we would need to investigate previous years to gain a better perspective."
    ]
   },
   {
