--- a/Final_Report.ipynb
+++ b/Final_Report.ipynb
@@ -2134,10 +2134,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "2e72d113-f60f-4265-8292-d5f79509e401",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in eval(expr, envir, enclos): object 'point_estimates' not found\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in eval(expr, envir, enclos): object 'point_estimates' not found\nTraceback:\n"
+     ]
+    }
+   ],
    "source": [
     "# Calculate the observed difference in proportion\n",
     "p_diff <- point_estimates$mean_prop[1] - point_estimates$mean_prop[2]\n",
@@ -2217,9 +2226,14 @@
     "\n",
     "Andresen, M. A., & Malleson, N. (2011). Testing the stability of crime patterns: Implications for theory and policy. *The Journal of Research in Crime and Delinquency,* 48(1), 58-82. https://doi.org/10.1177/0022427810384136\n",
     "\n",
+    "\n",
+    "Dhami, M.K. (2008). Youth Auto Theft: A Survey of a General Population of Canadian Youth. Canadian Journal of Criminology and Criminal Justice 50(2), 187-209. https://www.muse.jhu.edu/article/242411.\n",
+    "\n",
     "Koop-Monteiro, Yasmin. “The Social Organization of Community-Run Place: An Analysis of Community Gardens and Crime in Vancouver (2005–2015).” *Canadian Journal of Criminology and Criminal Justice,* 63, no. 1 (2021): 23–51. https://doi.org/10.3138/cjccj.2020-0013.\n",
     "\n",
     "Marsten, E. (2023, January 11). *B.C. police agencies warn of catalytic converter thefts.* City News Everywhere. https://vancouver.citynews.ca/2023/01/11/catalytic-converter-theft-saanich/\n",
+    "\n",
+    "McIntyre, R. S., & Lee, Y. (2020). Projected increases in suicide in canada as a consequence of COVID-19. Psychiatry Research, 290, 113104-113104. https://doi.org/10.1016/j.psychres.2020.113104\n",
     "\n",
     "Moman, S. (2022, August 26). Surrey seeing increase in catalytic converter thefts, police offer tips to protect cars. *Surrey Now-Leader.* https://www.surreynowleader.com/news/surrey-seeing-increase-in-catalytic-converter-thefts-police-offer-tips-to-protect-cars/\n",
     "\n",
@@ -2231,6 +2245,14 @@
     "\n",
     "Vancouver Police Department. (2021, October 20). VPD project leads to catalytic converter theft arrests [Press Release]. https://vpd.ca/news/2021/10/20/vpd-project-leads-to-catalytic-converter-theft-arrests/\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b015682c-1828-4538-9bc8-02a1559378d8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
