--- a/Final_Report.ipynb
+++ b/Final_Report.ipynb
@@ -3371,6 +3371,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5448d4e5-0d04-495a-9593-bc086aa12477",
+   "metadata": {},
+   "source": [
+    "*Evaluation of the results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e08a928b-f41d-4d10-ae4c-ee9b9483196d",
+   "metadata": {},
+   "source": [
+    "Facts have proved that in the same city, both the economically developed city center and the more chaotic areas are facing serious vehicle theft. The same goes for the Surrey region mentioned in the introductory section. The phenomenon of criminal theft in cities is closely related to people's daily life. Stolen vehicles will cause more crimes and affect the owner's property and travel. In the CBD and west end areas, patrols should be strengthened and publicity and warnings should be carried out."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a1b4a0db-b602-4bc1-bf61-29543f7817ce",
    "metadata": {},
    "source": [
