--- a/Final_Report.ipynb
+++ b/Final_Report.ipynb
@@ -3355,26 +3355,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "605bd208-6e57-44d1-8df3-ee8a62d064c2",
-   "metadata": {},
-   "source": [
-    "*The implications/impact of our findings*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6fc1f885-459a-4d7d-96c6-036ae6ac3235",
-   "metadata": {},
-   "source": [
-    "Baesd on the P value existed above which is nearly zero, we can generally conclude that there is strong evidence against the null hypothesis(The proportion of thefts from vehicles in the Strathcona and Grandview-Woodland districts is not significantly lower than in the West End and Central Business districts of Vancouver, BC, between 2018 to 2022) and that the alternative hypothesis is more likely to be true. From our data analysis, we can clearly conclude that the vehicle theft records in the CBD and west end areas are much higher than those in Strathcona and Grandview-Woodland areas. In the comparison of these two areas, nearly 4/5 of the vehicle theft crimes are in the more prosperous CBD and west end areas rather than the chaotic East Vancouver area. This is due to the good economic conditions and more car ownership in the CBD and west end areas. First, when an area has a good economy, more people can afford to buy a car, which means more cars on the road and therefore more opportunities to steal them. Also, in a strong economy, car owners may prefer to own newer, more expensive cars, which are more attractive to thieves. Secondly, with more and more expensive metal car equipment, thieves are more willing to steal cars with higher value and expensive personal items such as computers and bags placed inside the car for sale. Usually, cars that are stolen for financial gain are linked to organized adult offenders who are part of a criminal network. (Dhami, 2008) The more active population flow in the CBD and west end areas gives teenagers more opportunities to commit vehicle theft without being easily detected. Since the end of 2019, the global covid-19 epidemic has caused most of the schools to switch to online classes, so teenagers have more time to commit vehicle theft. In the context of the global epidemic, the unemployment rate of Canada's working-age population over the age of 15 has reached nearly 1/10 in September 2020 statistics. (McIntyre&Lee, 2020) The unemployment and life pressure of many people force these people to take risks and choose crimes to maintain their lives and escape social reality. But it is worth noting that the crime of car theft after 2020 has even decreased compared to before 2020, thanks to advanced car anti-theft systems that make it more difficult for unattended cars to go undetected \"Missing\"."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "5448d4e5-0d04-495a-9593-bc086aa12477",
    "metadata": {},
    "source": [
-    "*Evaluation of the results"
+    "* Evaluation of the results"
    ]
   },
   {
@@ -3382,7 +3366,23 @@
    "id": "e08a928b-f41d-4d10-ae4c-ee9b9483196d",
    "metadata": {},
    "source": [
-    "Facts have proved that in the same city, both the economically developed city center and the more chaotic areas are facing serious vehicle theft. The same goes for the Surrey region mentioned in the introductory section. The phenomenon of criminal theft in cities is closely related to people's daily life. Stolen vehicles will cause more crimes and affect the owner's property and travel. In the CBD and west end areas, patrols should be strengthened and publicity and warnings should be carried out."
+    "Baesd on the P value existed above which is nearly zero, we can generally conclude that there is strong evidence against the null hypothesis(The proportion of thefts from vehicles in the Strathcona and Grandview-Woodland districts is not significantly lower than in the West End and Central Business districts of Vancouver, BC, between 2018 to 2022) and that the alternative hypothesis is more likely to be true.Facts have proved that in the same city, both the economically developed city center and the more chaotic areas are facing serious vehicle theft. The same goes for the Surrey region mentioned in the introductory section. The phenomenon of criminal theft in cities is closely related to people's daily life. Stolen vehicles will cause more crimes and affect the owner's property and travel. In the CBD and west end areas, patrols should be strengthened and publicity and warnings should be carried out."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4fb8e48b-aeda-4bc9-909f-2082a09c0265",
+   "metadata": {},
+   "source": [
+    "* The implications/impact of our findings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea511609-5dbb-4bfd-8571-db6d5cf76b15",
+   "metadata": {},
+   "source": [
+    "From our data analysis, we can clearly conclude that the vehicle theft records in the CBD and west end areas are much higher than those in Strathcona and Grandview-Woodland areas. In the comparison of these two areas, nearly 4/5 of the vehicle theft crimes are in the more prosperous CBD and west end areas rather than the chaotic East Vancouver area. This is due to the good economic conditions and more car ownership in the CBD and west end areas. First, when an area has a good economy, more people can afford to buy a car, which means more cars on the road and therefore more opportunities to steal them. Also, in a strong economy, car owners may prefer to own newer, more expensive cars, which are more attractive to thieves. Secondly, with more and more expensive metal car equipment, thieves are more willing to steal cars with higher value and expensive personal items such as computers and bags placed inside the car for sale. Usually, cars that are stolen for financial gain are linked to organized adult offenders who are part of a criminal network. (Dhami, 2008) The more active population flow in the CBD and west end areas gives teenagers more opportunities to commit vehicle theft without being easily detected. Since the end of 2019, the global covid-19 epidemic has caused most of the schools to switch to online classes, so teenagers have more time to commit vehicle theft. In the context of the global epidemic, the unemployment rate of Canada's working-age population over the age of 15 has reached nearly 1/10 in September 2020 statistics. (McIntyre&Lee, 2020) The unemployment and life pressure of many people force these people to take risks and choose crimes to maintain their lives and escape social reality. But it is worth noting that the crime of car theft after 2020 has even decreased compared to before 2020, thanks to advanced car anti-theft systems that make it more difficult for unattended cars to go undetected \"Missing\"."
    ]
   },
   {
